# lab-pwa-waris

./: .gitignore  README.md  package-lock.json  setup-hosts.sh  start.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: dependabot.yml
docs/: FRONTEND_BACKEND_FIX.md  LESSONS_LEARNED.md  QUICK_REFERENCE.md  README.md  STATUS.md  TROUBLESHOOTING.md  URLS.md  tech-stack-2026.md
platform/: .editorconfig  .env.example  .lintstagedrc.json  .prettierignore  .prettierrc  commitlint.config.js  eslint.config.js  package-lock.json  package.json
platform/apps/ai/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  pytest.ini
platform/apps/ai/inference/: __init__.py  model_service.py
platform/apps/ai/models/: __init__.py  base.py
platform/apps/ai/models/anomaly/: __init__.py  baseline.py  detector.py  isolation_forest.py
platform/apps/ai/models/classification/: __init__.py  classifier.py  tree_models.py
platform/apps/ai/models/pattern/: __init__.py  clustering.py  recognizer.py
platform/apps/ai/models/timeseries/: __init__.py  baseline.py  forecaster.py  prophet_model.py
platform/apps/ai/tests/: __init__.py  test_example.py
platform/apps/api/: Dockerfile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
platform/apps/api/alembic/: env.py
platform/apps/api/alembic/versions/: 001_initial_schema.py
platform/apps/api/connectors/: __init__.py  base.py  dmama.py  dmama_parsers.py
platform/apps/api/core/: __init__.py  config.py  deps.py  llm_config.py  security.py  websocket.py
platform/apps/api/models/: __init__.py  alert.py  base.py  dma.py  user.py
platform/apps/api/routers/: __init__.py  ai.py  alerts.py  auth.py  chat.py  dashboard.py  dma.py  etl.py  knowledge.py  pdf.py  reports.py  ws.py
platform/apps/api/schemas/: __init__.py  alert.py  auth.py  common.py  dashboard.py  dma.py  report.py
platform/apps/api/scripts/: km_cli.py  km_indexer.py  km_validator.py
platform/apps/api/services/: __init__.py  alert_service.py  auth_service.py  dashboard_service.py  dma_service.py  etl_monitor.py  etl_scheduler.py  etl_service.py  llm_service.py  pdf_processor.py  report_service.py
platform/apps/api/services/llm/: __init__.py  guardrails.py  ollama.py  openrouter.py  service.py
platform/apps/api/services/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  milvus_client.py  retriever.py
platform/apps/api/tests/: __init__.py  test_dmama_parsers.py  test_etl_monitor.py  test_etl_scheduler.py  test_example.py
(+219 files in other folders)
