[project]
name = "waris-ai"
version = "0.1.0"
description = "WARIS AI - AI/ML Services for Water Loss Analysis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Core ML
    "torch>=2.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",

    # LLM & RAG
    "langchain>=1.2.0",
    "langgraph>=1.0.0",
    "pymilvus>=2.5.0",

    # MLOps
    "mlflow>=3.8.0",

    # Thai NLP
    "pythainlp>=5.0.0",

    # API
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.0",

    # Utilities
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

training = [
    "transformers>=4.47.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "peft>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
